# x-spanformer

./: .flake8  .gitignore  .pylintrc  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
config/pipelines/: jsonl2vocab.yaml  repo2jsonl.yaml  vocab2embedding.yaml
data/benchmarks/: vocab2embedding_benchmark_20250723_174209.json  vocab2embedding_benchmark_20250723_185725.json  vocab2embedding_benchmark_20250723_190013.json  vocab2embedding_benchmark_20250723_190110.json  vocab2embedding_benchmark_20250723_190352.json  vocab2embedding_benchmark_20250723_190632.json  vocab2embedding_benchmark_20250723_191012.json  vocab2embedding_benchmark_20250723_191234.json
data/pretraining/: 01fd28e0.csv
data/vocab/: corpus.jsonl  vocab.jsonl  vocab_stats.json
docs/: pretraining_schema.md  seed_embeddings.md  sequence_introspector.md  testing_guide.md  vocab_induction.md
paper/XSpanformer_TokenizerFree_SpanAwareEncoder_RawsonChrzanowski_Preprint_v1.0_2025-06-26/: .latexmkrc
tests/: conftest.py  test_agents.py  test_comprehensive_judge.py  test_critique_session.py  test_e2e_ollama_client.py  test_error_handling.py  test_improved_field_bug.py  test_pipeline_and_agents.py  test_pipelines_csv2jsonl.py  test_pipelines_jsonl2vocab.py  test_pipelines_pdf2jsonl.py  test_rich_utils.py  test_schema_vocab.py  test_vocab_induction.py
tests/agents/: __init__.py
tests/core/: __init__.py  test_config_loader.py  test_constants.py  test_rich_utils.py  test_vocab_logging.py  test_vocab_whitespace.py
tests/embedding/: __init__.py  (+4 more)
(+212 files in other folders)
