[project]
name = "x-spanformer"
version = "1.0.0"
description = "Tokenizer-free, span-aware encoder architecture inspired by X-bar theory. Jointly learns segmentation and representation using pointer networks and compositional spans."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "pdf2image>=1.17.0",
    "rich>=14.0.0",
    "spacy>=3.8.7",
]
