[project]
name = "x-spanformer"
version = "1.0.0"
description = "Tokenizer-free, span-aware encoder architecture inspired by X-bar theory. Jointly learns segmentation and representation using pointer networks and compositional spans."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langid>=1.1.6",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "pdf2seg>=1.0.1",
    "pypdf>=5.7.0",
    "rich>=13.7.1",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["x_spanformer*"]
